# lwrs

./: .gitignore  CMakeLists.txt  README
include/: lwrs.h
src/: crc32.cpp  lwrs_tester.cpp
